# message-system

./: CMakeLists.txt  Makefile  README.md  install.sh  main.cpp  message.hpp  message_system_test.cpp
common/: CMakeLists.txt
common/include/common/: signal_handler.hpp
common/src/: signal_handler.cpp
message-container/: CMakeLists.txt
message-container/include/message-container/: container.hpp  message.hpp
message-system/: CMakeLists.txt
message-system/src/: message_system_processes.cpp  message_system_threads.cpp
messages-container/: CMakeLists.txt
messages-container/include/messages-container/: lock_free_container.hpp  message.hpp
messages-container/include/messages-container/blocking/: hash_map.hpp  shared_mutex.hpp  spin_lock.hpp
messages-container/include/messages-container/details/: epoch_based_freedom.hpp
messages-container/include/messages-container/lock-free/: NOTES  lock_free_container.hpp
messages-container/include/messages-container/lock-free/details/: epoch_based_freedom.hpp
messages-container/src/: container_test.cpp  lock_free_container.cpp
serialization/: CMakeLists.txt  serializer.cpp  serializer.hpp
tcp-messages/: CMakeLists.txt
tcp-messages/include/tcp-messages/: tcp_processor.hpp
tcp-messages/src/: main.cpp  tcp_processor.cpp
tcp-messages/src/details/: ring_buffer.hpp
udp-messages/: CMakeLists.txt
udp-messages/include/udp-messages/: udp_processor.hpp
udp-messages/src/: main.cpp  udp_processor.cpp
